[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "joblin"
description = "An SQLite-based synchronous job queue."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "thegamecracks" }]
license = { text = "MIT" }
classifiers = []
dynamic = ["version"]
dependencies = []

[project.optional-dependencies]
docs = [
    "Sphinx>=7.3.7",
    "autoclasstoc>=1.6.0",
    "furo>=2024.4.27",
]
tests = ["coverage>=7.5.0", "pytest>=8.2.0"]

[project.urls]
"Homepage" = "https://github.com/thegamecracks/joblin"
"Issue Tracker" = "https://github.com/thegamecracks/joblin/issues"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if (typing\\.)?TYPE_CHECKING:",
    "if __name__ == \"__main__\":",
    "\\s*\\.\\.\\.$",
    "raise NotImplementedError",
    "def __repr__",
]

[tool.coverage.run]
branch = true
source_pkgs = ["joblin"]

[tool.setuptools_scm]
